# yolo11_ros2_py

./: README.md
src/kapal/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/kapal/kapal/: decision_maker.py  motor_controller.py  yolo_detector.py
src/kapal/launch/: robot_launch.py
